--- a/css/assets/header.css
+++ b/css/assets/header.css
@@ -2,6 +2,7 @@
   position: fixed;
   top: 0;
   z-index: 2;
+  margin-bottom: 100px;
   background-color: #010018;
   height: 100px;
   display: flex;
