--- a/css/assets/header.css
+++ b/css/assets/header.css
@@ -5,6 +5,7 @@
   margin-bottom: 100px;
   background-color: #010018;
   height: 100px;
+  width: 100%;
   display: flex;
   align-items: center;
 }
