--- a/css/assets/header.css
+++ b/css/assets/header.css
@@ -2,7 +2,6 @@
   position: fixed;
   top: 0;
   z-index: 2;
-  margin-bottom: 100px;
   background-color: #010018;
   height: 100px;
   width: 100%;
@@ -20,6 +19,8 @@
   z-index: 2;
   background-color: #010018;
   height: 100px;
+  width: 100%;
+  margin-bottom: -100px;
   display: flex;
   align-items: center;
 }
