--- a/css/assets/footer.css
+++ b/css/assets/footer.css
@@ -369,7 +369,7 @@
 
 
 
-@media only screen and (min-width: 999px) {
+@media only screen and (max-width: 999px) {
     .body .footer .pricon {
         flex-direction: column;
     }
