--- a/css/assets/footer.css
+++ b/css/assets/footer.css
@@ -212,13 +212,13 @@
 
 
 .body .footer .language .selection::-webkit-scrollbar {
-    background-color: #010018;
+    background-color: #02002e;
 }
 
 
 
 .body .footer .language .selection::-webkit-scrollbar-track {
-    background-color: #010018;
+    background-color: #02002e;
     border-radius: 10px;
 }
 
