--- a/css/privacy-policy/image.css
+++ b/css/privacy-policy/image.css
@@ -8,7 +8,7 @@
     margin-right: auto;
 }
 
-.body .content .redirect-sign {
+.body .content .redirect-sign img {
     width: 11px;
     height: 11px;
 }
