--- a/css/privacy-policy/image.css
+++ b/css/privacy-policy/image.css
@@ -8,7 +8,15 @@
     margin-right: auto;
 }
 
+
+
 .body .content img {
     width: 11px;
     height: 11px;
+}
+
+
+
+.body .content a img:hover {
+    text-decoration: underline;
 }
