--- a/styles/apply/content.css
+++ b/styles/apply/content.css
@@ -1,150 +1,195 @@
-.body .content .headline {
-    text-align: center;
-    margin-bottom: 20px;
+.body .content h1 {
+  text-align: center;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+.body .content h1 strike {
+  color: #f84130;
+}
+.body .content h1 strike::selection {
+  color: #f84130;
+}
+.body .content h1 u {
+  color: #00ffba;
+}
+.body .content h1 u::selection {
+  color: #007896;
 }
 
-.body .content .platform {
-    margin-top: 100px;
-    margin-bottom: 50px;
-    display: flex;
+.body .content .intro {
+  max-width: 800px;
+  margin-top: 100px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 20px;
+  padding-left: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  vertical-align: top;
+}
+.body .content .intro .contain {
+  width: 320px;
+  margin: 90px;
+  padding: 20px;
+  background-color: #ffffff27;
+  border: 5px solid #fff;
+  border-radius: 50px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+.body .content .intro .contain img {
+  width: 200px;
+  height: 200px;
+  margin: 10px;
+}
+.body .content .intro .contain h2 {
+  margin: 20px;
+}
+.body .content .intro .contain h2 span.highlight::selection {
+  color: #007896;
+}
+.body .content .intro .contain h5 {
+  margin-bottom: 25px;
+}
+
+.body .content .button-apply {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 200px;
+  margin-bottom: 100px;
+}
+.body .content .button-apply .apply-int-bounce {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 220px;
+  height: 55px;
+}
+.body .content .button-apply .apply-int-bounce .apply-int {
+  border-radius: 10px;
+  width: auto;
+  height: auto;
+  cursor: pointer;
+  transition-duration: 0.2s ease-out;
+  -webkit-transition-duration: 0.2s ease-out;
+  -o-transition-duration: 0.2s ease-out;
+}
+.body .content .button-apply .apply-int-bounce .apply-int:hover {
+  transition-duration: 0.1s ease-out;
+  -webkit-transition-duration: 0.1s ease-out;
+  -o-transition-duration: 0.1s ease-out;
+}
+.body .content .button-apply .apply-int-bounce .apply-int:active {
+  padding: 10px;
+  transition-duration: 0.1s ease-out;
+  -webkit-transition-duration: 0.1s ease-out;
+  -o-transition-duration: 0.1s ease-out;
+}
+.body .content .button-apply .apply-int-bounce .apply-int .apply {
+  width: 200px;
+  height: 50px;
+}
+.body .content .button-apply .apply-int-bounce .apply-int .apply .selection {
+  width: 200px;
+  height: 50px;
+}
+.body
+  .content
+  .button-apply
+  .apply-int-bounce:active
+  .apply-int:active
+  .apply
+  .selection {
+  width: 190px;
+  height: 45px;
+  margin: 5px -1px 5px 6px;
+  transition-duration: 0.1s ease-out;
+  -webkit-transition-duration: 0.1s ease-out;
+  -o-transition-duration: 0.1s ease-out;
+}
+.body
+  .content
+  .button-apply
+  .apply-int-bounce
+  .apply-int
+  .apply
+  .selection
+  button {
+  width: 200px;
+  height: 50px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  border: 0px;
+  border-radius: 10px;
+  background-color: #00ffba;
+}
+.body
+  .content
+  .button-apply
+  .apply-int-bounce
+  .apply-int
+  .apply
+  .selection
+  button::selection {
+  background-color: #00ccff;
+}
+.body
+  .content
+  .button-apply
+  .apply-int-bounce
+  .apply-int
+  .apply
+  .selection
+  button::-moz-selection {
+  background-color: #00ccff;
+}
+.body
+  .content
+  .button-apply
+  .apply-int-bounce:hover
+  .apply-int:hover
+  .apply
+  .selection
+  button {
+  width: 200px;
+  height: 50px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  border: 0px;
+  border-radius: 10px;
+  background-color: #00e0a5;
+}
+.body
+  .content
+  .button-apply
+  .apply-int-bounce:active
+  .apply-int:active
+  .apply
+  .selection
+  button {
+  width: 190px;
+  height: 45px;
+  font-size: 1.17rem;
+  background-color: #00e9ab;
+}
+
+@media only screen and (max-width: 820px) {
+  .body .content .intro {
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    vertical-align: top;
+  }
 }
 
-.body .content .platform .discord {
-    display: flex;
-    width: 320px;
-    height: 320px;
-    margin-bottom: 40px;
-    padding: 32px;
-    border-radius: 5px;
-    background-color: #36393f;
-    align-items: center;
-    flex-direction: column;
-}
-.body .content .platform .discord img {
-    display: block;
-    width: 100px;
-    height: 100px;
-}
-.body .content .platform .discord h3 {
-    margin-top: 10px;
-    font-family: "Discord_Ginto";
-}
-.body .content .platform .discord a {
-    display: block;
-    margin-top: auto;
-    width: 100%;
-    height: 44px;
-}
-.body .content .platform .discord a button {
-    display: block;
-    color: #fff;
-    background-color: #5865f2;
-    border: none;
-    border-radius: 3px;
-    margin-top: auto;
-    padding: 2px 16px;
-    min-width: 130px;
-    width: 100%;
-    min-width: 130px;
-    height: 44px;
-    transition: background-color .17s ease,color .17s ease;
-    -webkit-transition: background-color .17s ease,color .17s ease;
-}
-.body .content .platform .discord a button:hover {
-    background-color: #4752c4;
-}
-.body .content .platform .discord a button:active {
-    background-color: #3c45a5;
-}
-.body .content .platform .discord a button .text {
-    margin: 0 auto;
-    font-size: 100%;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    font-family: "Discord_Whitney";
-}
-
-.body .content .platform .guilded {
-    display: flex;
-    width: 320px;
-    height: 320px;
-    padding: 24px;
-    border: 1px solid #a3a3ac33;
-    border-radius: 8px;
-    background-color: #373943;
-    align-items: center;
-    flex-direction: column;
-}
-.body .content .platform .guilded img {
-    display: block;
-    width: 90px;
-    height: 90px;
-    margin: 20px 0px 24px 0px;
-}
-.body .content .platform .guilded h3 {
-    font-family: "Guilded_Gotham";
-}
-.body .content .platform .guilded a {
-    display: block;
-    margin-top: auto;
-    margin-bottom: 20px;
-    width: 100%;
-    height: 44px;
-}
-.body .content .platform .guilded a button {
-    display: block;
-    color: #fff;
-    background-image: linear-gradient(to right, #ffb400, #e4c519, #edd75c);
-    background-size: 100% 200%;
-    background-position: 0 0;
-    box-shadow: 0 0 6px 0 #ffea0080;
-    border: solid 1px gold;
-    border-radius: 4px;
-    outline: inherit !important;
-    padding: 7px 16px;
-    min-width: 130px;
-    width: 100%;
-    min-width: 130px;
-    height: 35px;
-    transition: box-shadow 220ms ease-out, border-color 220ms ease-out, color 220ms ease-out, background-color 220ms ease-out, background-position 220ms ease-out;
-    -webkit-transition: box-shadow 220ms ease-out, border-color 220ms ease-out, color 220ms ease-out, background-color 220ms ease-out, background-position 220ms ease-out;
-}
-.body .content .platform .guilded a button:hover {
-    background-image: linear-gradient(to right, #e5c726, #e5c726, #e5c726);
-    background-size: 100% 200%;
-    background-position: 99% 0;
-    box-shadow: 0 0 10px 0 #ffea0080;
-    border: solid 1px gold;
-}
-.body .content .platform .guilded a button:active {
-    margin-top: 1.3px;
-    animation: push-in 80ms forwards ease-out 0s 1;
-    animation-duration: .5s;
-}
-.body .content .platform .guilded a button .text {
-    opacity: 1;
-    color: #1d1f24;
-    transition: opacity 200ms ease;
-    font-family: "Guilded_GothamBold";
-    font-weight: bolder;
-}
-
-@media only screen and (min-width: 789px) {
-    .body .content {
-        display: block;
-        width: 789px;
-        margin-right: auto;
-        margin-left: auto;
-    }
-    .body .content .platform {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        align-items: flex-start;
-    }
+@media only screen and (min-width: 820px) {
+  .body .content .intro {
+    align-items: flex-start;
+    flex-direction: row;
+  }
+  .body .content .intro .contain {
+    margin: 55px;
+  }
 }
