--- a/components/assets/footer.html
+++ b/components/assets/footer.html
@@ -83,16 +83,16 @@
   </div>
 
   <div class="image-logo">
-    <div class="image-bounce">
+    <!-- <div class="image-bounce">
       <div class="image">
-        <a href="https://t.me/rarefrostbites" target="_blank">
+        <a href="#" target="_blank">
           <img
-            src="/media/assets/social_media/telegram.svg"
-            alt="Telegram logo"
+            src="/media/assets/social_media/whatsapp.svg"
+            alt="WhatsApp logo"
           />
         </a>
       </div>
-    </div>
+    </div> -->
 
     <div class="image-bounce">
       <div class="image">
@@ -113,7 +113,7 @@
 </div>
 
 <div class="year">
-  <h5 data-cr-date>6969</h5>
+  <h5>© 2020 - 2022</h5>
 </div>
 
 <span class="user notranslate">
