what the fuck is this getting deleted?
Co-authored-by: PhilMinecraft <arturo.rabino.3@outlook.com>

--- a/components/404/footer.html
+++ b/components/404/footer.html
@@ -78,7 +78,7 @@
   <div class="image-logo">
     <!-- <div class="image-bounce">
       <div class="image">
-        <a href="#" target="_blank">
+        <a href="https://chat.whatsapp.com/DnFg8vKv8sq4uXPqVnizu9" target="_blank">
           <img
             src="/media/assets/social_media/whatsapp.svg"
             alt="WhatsApp logo"
