--- a/store/components/assets/header.html
+++ b/store/components/assets/header.html
@@ -1,23 +1,170 @@
 <a href="/store/">
-    <div class="mobile-logo">
-      <img src="/media/store/rfbstore.svg" alt="RFB Store logo" />
-    </div>
+  <div class="mobile-logo">
+    <img src="/media/store/rfbstore.svg" alt="RFB Store logo" />
+  </div>
 </a>
 
 <a href="/store/">
-    <div class="desktop-logo">
-        <picture>
-          <source
-            srcset="/media/store/rfbstore_logowithwordmark.svg"
-            media="(min-width: 800px)"
-            width="130px"
-          />
+  <div class="desktop-logo">
+    <picture>
+      <source
+        srcset="/media/store/rfbstore_logowithwordmark.svg"
+        media="(min-width: 800px)"
+        width="130px"
+      />
 
-          <img
-            src="/media/store/rfbstore.svg"
-            alt="RareFrostbites logo"
-            width="30.325px"
-          />
-        </picture>
-    </div>
+      <img
+        src="/media/store/rfbstore.svg"
+        alt="RareFrostbites logo"
+        width="30.325px"
+      />
+      </picture>
+  </div>
 </a>
+
+<span class="user notranslate">
+  <div class="language" id="language">
+    <div class="current" id="current" onclick="openLanguage()">
+      <img src="https://flagcdn.com/us.svg" width="30" alt="United States" />
+      <h6>US</h6>
+    </div>
+
+    <div class="selection" id="selection">
+      <div class="select" style="margin-top: 0px">
+        <a href="?lang=zh-cn"
+          ><h5>
+            <img src="https://flagcdn.com/cn.svg" width="30" alt="China" /> CN
+          </h5></a
+        >
+      </div>
+      <div class="select">
+        <a href="?lang=es-es"
+          ><h5>
+            <img src="https://flagcdn.com/es.svg" width="30" alt="Spain" /> ES
+          </h5></a
+        >
+      </div>
+      <div class="select">
+        <a href="?lang=en-gb"
+          ><h5>
+            <img
+              src="https://flagcdn.com/gb.svg"
+              width="30"
+              alt="Great Britain"
+            />
+            GB
+          </h5></a
+        >
+      </div>
+      <div class="select">
+        <a href="?lang=id-id"
+          ><h5>
+            <img src="https://flagcdn.com/id.svg" width="30" alt="Indonesia" />
+            ID
+          </h5></a
+        >
+      </div>
+      <div class="select">
+        <a href="?lang=hi-in"
+          ><h5>
+            <img src="https://flagcdn.com/in.svg" width="30" alt="India" /> IN
+          </h5></a
+        >
+      </div>
+      <div class="select">
+        <a href="?lang=ja-jp"
+          ><h5>
+            <img src="https://flagcdn.com/jp.svg" width="30" alt="Japan" /> JP
+          </h5></a
+        >
+      </div>
+      <div class="select">
+        <a href="?lang=km-kh"
+          ><h5>
+            <img src="https://flagcdn.com/kh.svg" width="30" alt="Cambodia" />
+            KH
+          </h5></a
+        >
+      </div>
+      <div class="select">
+        <a href="?lang=ko-kr"
+          ><h5>
+            <img src="https://flagcdn.com/kr.svg" width="30" alt="Korea" /> KR
+          </h5></a
+        >
+      </div>
+      <div class="select">
+        <a href="?lang=my-mm"
+          ><h5>
+            <img src="https://flagcdn.com/mm.svg" width="30" alt="Myanmar" />
+            MM
+          </h5></a
+        >
+      </div>
+      <div class="select">
+        <a href="?lang=ms-my"
+          ><h5>
+            <img src="https://flagcdn.com/my.svg" width="30" alt="Malaysia" />
+            MY
+          </h5></a
+        >
+      </div>
+      <div class="select">
+        <a href="?lang=fil-ph"
+          ><h5>
+            <img
+              src="https://flagcdn.com/ph.svg"
+              width="30"
+              alt="Philippines"
+            />
+            PH
+          </h5></a
+        >
+      </div>
+      <div class="select">
+        <a href="?lang=pt-pt"
+          ><h5>
+            <img src="https://flagcdn.com/pt.svg" width="30" alt="Portugal" />
+            PT
+          </h5></a
+        >
+      </div>
+      <div class="select">
+        <a href="?lang=ru-ru"
+          ><h5>
+            <img src="https://flagcdn.com/ru.svg" width="30" alt="Russia" />
+            RU
+          </h5></a
+        >
+      </div>
+      <div class="select">
+        <a href="?lang=zh-tw"
+          ><h5>
+            <img src="https://flagcdn.com/tw.svg" width="30" alt="Taiwan" />
+            TW
+          </h5></a
+        >
+      </div>
+      <div class="select">
+        <a href="?lang=en-us"
+          ><h5>
+            <img
+              src="https://flagcdn.com/us.svg"
+              width="30"
+              alt="United States"
+            />
+            US
+          </h5></a
+        >
+      </div>
+      <div class="select" style="margin-bottom: 0px">
+        <a href="?lang=vi-vn"
+          ><h5>
+            <img src="https://flagcdn.com/vn.svg" width="30" alt="Vietnam" />
+            VN
+          </h5></a
+        >
+      </div>
+    </div>
+  </div>
+</span>
