--- a/styles/assets/fonts.css
+++ b/styles/assets/fonts.css
@@ -1,33 +1,30 @@
 @font-face {
-  src: url("/fonts/Minecraft-Regular.ttf") format('truetype');
+  src: url("/fonts/Minecraft-Regular.ttf") format("truetype");
   font-family: Mojangles;
   font-display: fallback;
 }
-
-
+@font-face {
+  src: url("/fonts/Minecraft-Ten.ttf") format("truetype");
+  font-family: Minecraft10;
+  font-display: fallback;
+}
 
 @font-face {
-  src: url("/fonts/Unifont.ttf") format('truetype');
+  src: url("/fonts/Unifont.ttf") format("truetype");
   font-family: Unicode;
   font-display: fallback;
 }
 
-
-
 /* Russian */
 
-
-
 @font-face {
-  src: url("/fonts/ru_ru/18VAG Rounded M Normal.ttf") format('truetype');
+  src: url("/fonts/ru_ru/18VAG Rounded M Normal.ttf") format("truetype");
   font-family: VAGRoundedM;
   font-display: fallback;
 }
 
-
-
 @font-face {
-  src: url("/fonts/ru_ru/18VAG Rounded M Bold.ttf") format('truetype');
+  src: url("/fonts/ru_ru/18VAG Rounded M Bold.ttf") format("truetype");
   font-family: VAGRoundedB;
   font-display: fallback;
 }
