--- a/store/styles/assets/header.css
+++ b/store/styles/assets/header.css
@@ -103,7 +103,7 @@
 }
 .body .header .language .current h6 {
   color: #484d4a;
-  font-family: "Minecraft10";
+  font-family: "MC10";
 }
 .body .header .language .selection {
   position: relative;
