--- a/store/styles/assets/header.css
+++ b/store/styles/assets/header.css
@@ -156,6 +156,7 @@
 }
 
 .body .header .language .selection .select h5 {
+  font-family: "MC10";
   padding: 5px;
   display: flex;
   align-items: center;
