--- a/styles/assets/footer.css
+++ b/styles/assets/footer.css
@@ -110,6 +110,10 @@
   width: 100px;
 }
 
+/* .body .footer .year h5::after {
+    content: "© 2020 - 2022";
+} */
+
 .body .footer .language .current {
   position: relative;
   display: flex;
@@ -299,5 +303,9 @@
   .body .footer {
     padding-right: 10%;
     padding-left: 10%;
+  }
+  .body .footer hr {
+    width: 250%;
+    margin-left: -60%;
   }
 }
