--- a/components/assets/footer.html
+++ b/components/assets/footer.html
@@ -85,7 +85,7 @@
   <div class="image-logo">
     <!-- <div class="image-bounce">
       <div class="image">
-        <a href="https://chat.whatsapp.com/DnFg8vKv8sq4uXPqVnizu9" target="_blank">
+        <a href="#" target="_blank">
           <img
             src="/media/assets/social_media/whatsapp.svg"
             alt="WhatsApp logo"
