--- a/components/assets/header.html
+++ b/components/assets/header.html
@@ -10,7 +10,7 @@
   
   <a href="/">
     <div class="mobile-logo">
-      <img src="/media/assets/rfb.svg" alt="RareFrostbites logo">
+      <img src="/media/assets/rfb.svg" alt="RareFrostbites Logo">
     </div>
   </a>
   
@@ -19,7 +19,7 @@
       <picture>
         <source srcset="/media/assets/rfb_logowithwordmark.svg" media="(min-width: 1336px)" width="182px">
         
-        <img src="/media/assets/rfb.svg" alt="RareFrostbites logo" width="35px">
+        <img src="/media/assets/rfb.svg" alt="RareFrostbites Logo" width="35px">
       </picture>
     </div>
   </a>
