--- a/components/contact/content.html
+++ b/components/contact/content.html
@@ -1,5 +1,5 @@
 <div class="title">
-  <h1 data-ask-for-contact>you want to contact Us.</h1>
+  <h1 data-ask-for-contact>You choose which email you want to contact Us.</h1>
 </div>
 
 <div class="email-container">
