--- a/components/assets/products.html
+++ b/components/assets/products.html
@@ -8,7 +8,7 @@
   </div>
 </div>
 <div class="products-overlay">
-  <a href="/store">
+  <a href="/en-us/store">
     <div class="selection">
       <div class="selection-img">
         <img src="/media/store/rfbstore.svg" alt="RFB Store" />
