--- a/components/index/content.html
+++ b/components/index/content.html
@@ -3,10 +3,7 @@
     <h1 data-introduction>We make Packs just for you.</h1>
   </div>
   <div class="rfb_wordmark">
-    <img
-      src="/media/assets/rfb_wordmark.svg"
-      alt="RareFrostbites Typography Logo"
-    />
+    <img src="/media/assets/rfb_wordmark.svg" alt="RareFrostbites Typography Logo" />
   </div>
 </div>
 <div class="packs_for_you-mobile">
@@ -28,7 +25,7 @@
 <div class="rfbstore">
   <h1 data-intro-rfbstore>We made a Store just for you</h1>
   <div class="rfbstore_button">
-    <a href="/store"
+    <a href="en-us/store"
       ><button>
         <h3 data-intro-rfbstore-button>Explore and Claim!</h3>
       </button></a
@@ -49,7 +46,7 @@
   </h1>
   <div class="product-icon">
     <div class="container-sel-bounce">
-      <a href="/store"
+      <a href="en-us/store"
         ><div class="container-sel">
           <div class="container">
             <div class="selection">
