--- a/styles/store/assets/header.css
+++ b/styles/store/assets/header.css
@@ -103,7 +103,7 @@
 }
 .body .header .language .current h6 {
   color: #484d4a;
-  font-family: "Minecraft10";
+  font-family: "MC10";
 }
 .body .header .language .selection {
   position: relative;
@@ -156,6 +156,7 @@
 }
 
 .body .header .language .selection .select h5 {
+  font-family: "MC10";
   padding: 5px;
   display: flex;
   align-items: center;
