--- a/styles/store/assets/header.css
+++ b/styles/store/assets/header.css
@@ -72,92 +72,162 @@
   align-items: center;
 }
 
-.body .header .language {
-  margin-left: 750px;
-}
+
 .body .header .language .current {
-  position: relative;
+  position: absolute;
   display: flex;
   z-index: 3;
-  float: right;
-  margin-right: 30px;
+  top: 13px;
+  right: 0px;
+  margin-right: 39px;
   padding: 5px;
   width: 60px;
   height: 28px;
-  border-radius: 5px;
   cursor: pointer;
   align-items: center;
   justify-content: space-between;
 }
-
 .body .header .language .current:hover {
-  background-color: #ffffff43;
+  background-color: #8e8e8e;
 }
-
 .body .header .language .current:active {
-  background-color: #ffffff33;
+  background-color: #208100;
 }
 
-.body .header .language .current img {
-  border-radius: 3px;
+.body .header_shadow .language .current {
+  position: absolute;
+  display: flex;
+  z-index: 3;
+  top: 13px;
+  right: 0px;
+  margin-right: 39px;
+  padding: 5px;
+  width: 60px;
+  height: 28px;
+  cursor: pointer;
+  align-items: center;
+  justify-content: space-between;
 }
+.body .header_shadow .language .current:hover {
+  background-color: #8e8e8e;
+}
+.body .header_shadow .language .current:active {
+  background-color: #208100;
+}
+
 .body .header .language .current h6 {
   color: #484d4a;
   font-family: "MC10";
 }
+.body .header_shadow .language .current h6 {
+  color: #484d4a;
+  font-family: "MC10";
+}
+
+
 .body .header .language .selection {
-  position: relative;
+  position: absolute;
   display: none;
   z-index: 6;
   flex-direction: column;
   float: right;
   padding: 8px 5px 8px 5px;
-  margin-bottom: -275px;
+  top: 45px;
   right: 12px;
-  width: 90px;
+  width: 100px;
   height: 265px;
-  background-color: #02002e;
-  border-radius: 5px;
+  background-color: #2f2f2f;
+  border: 6px solid #1b1b1b;
   align-content: center;
   overflow-y: scroll;
 }
-
 .body .header .language .selection::-webkit-scrollbar {
-  background-color: #02002e;
+  width: 17px;
+  height: 17px;
+  background-color: #434343;
 }
-
 .body .header .language .selection::-webkit-scrollbar-track {
-  background-color: #02002e;
-  border-radius: 10px;
+  background-color: #434343;
+  border: 5px solid #1b1b1b;
 }
-
-.body .header .language .selection .select {
-  display: flex;
-  height: 30px;
-  margin-top: 2.5px;
-  margin-bottom: 2.5px;
-  border-radius: 5px;
-  animation-duration: 0.2s;
-  align-items: center;
+.body .header .language .selection::-webkit-scrollbar-thumb {
+  border: 5px solid #1b1b1b;
+}
+.body .header_shadow .language .selection {
+  position: absolute;
+  display: none;
+  z-index: 6;
+  flex-direction: column;
+  float: right;
+  padding: 8px 5px 8px 5px;
+  top: 45px;
+  right: 12px;
+  width: 100px;
+  height: 265px;
+  background-color: #2f2f2f;
+  border: 6px solid #1b1b1b;
+  align-content: center;
+  overflow-y: scroll;
+}
+.body .header_shadow .language .selection::-webkit-scrollbar {
+  width: 17px;
+  height: 17px;
+  background-color: #434343;
+}
+.body .header_shadow .language .selection::-webkit-scrollbar-track {
+  background-color: #434343;
+  border: 5px solid #1b1b1b;
+}
+.body .header_shadow .language .selection::-webkit-scrollbar-thumb {
+  border: 5px solid #1b1b1b;
 }
 
 .body .header .language .selection .select:hover {
   background-color: #ffffff43;
   animation-duration: 0.1s;
 }
-
 .body .header .language .selection .select:active {
   background-color: #ffffff33;
   animation-duration: 0.1s;
 }
-
-.body .header .language .selection .select img {
-  border-radius: 3px;
+.body .header_shadow .language .selection .select:hover {
+  background-color: #ffffff43;
+  animation-duration: 0.1s;
+}
+.body .header_shadow .language .selection .select:active {
+  background-color: #ffffff33;
+  animation-duration: 0.1s;
 }
 
-.body .header .language .selection .select h5 {
-  font-family: "MC10";
+.body .header .language .selection .select a {
   padding: 5px;
+  display: flex;
+  height: 30px;
+  margin-top: 2.5px;
+  margin-bottom: 2.5px;
+  animation-duration: 0.2s;
+  align-items: center;
+  justify-content: space-between;
+}
+.body .header_shadow .language .selection .select a {
+  padding: 5px;
+  display: flex;
+  height: 30px;
+  margin-top: 2.5px;
+  margin-bottom: 2.5px;
+  animation-duration: 0.2s;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.body .header .language .selection .select a h5 {
+  font-family: "MC10";
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+.body .header_shadow .language .selection .select a h5 {
+  font-family: "MC10";
   display: flex;
   align-items: center;
   text-decoration: none;
