--- a/components/store/index/content.html
+++ b/components/store/index/content.html
@@ -25,6 +25,7 @@
     </a>
 </div>
 
+
 <div class="packs">
     <a href="#">
         <div class="sel texture">
@@ -32,8 +33,13 @@
                 <img src="/media/store/contents/Ya Ea.jpg" alt="Ya Ea">
             </div>
             <div class="ph">
-                <div class="pt">
-                    <h3>Ya Ea</h3>
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Ya Ea</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
                 </div>
                 <div class="pp">
                     <h3 data-pp>FREE</h3>
@@ -48,8 +54,13 @@
                 <img src="/media/store/contents/RareChristmas Bundle.jpg" alt="RareChristmas Bundle">
             </div>
             <div class="ph">
-                <div class="pt">
-                    <h3>RareChristmas Bundle</h3>
+                <div class="pi">
+                    <div class="pt">
+                        <h3>RareChristmas Bundle</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
                 </div>
                 <div class="pp">
                     <h3 data-pp>FREE</h3>
@@ -64,8 +75,13 @@
                 <img src="/media/store/contents/1st Century.jpg" alt="1st Century">
             </div>
             <div class="ph">
-                <div class="pt">
-                    <h3>1st Century</h3>
+                <div class="pi">
+                    <div class="pt">
+                        <h3>1st Century</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
                 </div>
                 <div class="pp">
                     <h3 data-pp>FREE</h3>
@@ -80,8 +96,13 @@
                 <img src="/media/store/contents/Find the Lever.jpg" alt="Find the Lever">
             </div>
             <div class="ph">
-                <div class="pt">
-                    <h3>Find the Lever</h3>
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Find the Lever</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
                 </div>
                 <div class="pp">
                     <h3 data-pp>FREE</h3>
@@ -96,8 +117,13 @@
                 <img src="/media/store/contents/Halloween Endless Run.jpg" alt="Halloween Endless Run">
             </div>
             <div class="ph">
-                <div class="pt">
-                    <h3>Halloween Endless Run</h3>
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Halloween Endless Run</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
                 </div>
                 <div class="pp">
                     <h3 data-pp>FREE</h3>
@@ -112,8 +138,13 @@
                 <img src="/media/store/contents/RareFrostbites Halloween Skin Pack Bundle.jpg" alt="RareFrostbites Halloween Skin Pack Bundle">
             </div>
             <div class="ph">
-                <div class="pt">
-                    <h3>RareFrostbites Halloween Skin Pack Bundle</h3>
+                <div class="pi">
+                    <div class="pt">
+                        <h3>RareFrostbites Halloween Skin Pack Bundle</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
                 </div>
                 <div class="pp">
                     <h3 data-pp>FREE</h3>
@@ -128,8 +159,13 @@
                 <img src="/media/store/contents/RareFrostbites Apocalyptic Wars.jpg" alt="RareFrostbites Apocalyptic Wars">
             </div>
             <div class="ph">
-                <div class="pt">
-                    <h3>RareFrostbites Apocalyptic Wars</h3>
+                <div class="pi">
+                    <div class="pt">
+                        <h3>RareFrostbites Apocalyptic Wars</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
                 </div>
                 <div class="pp">
                     <h3 data-pp>FREE</h3>
@@ -144,8 +180,13 @@
                 <img src="/media/store/contents/Glitched Skin Pack.jpg" alt="Glitched Skin Pack">
             </div>
             <div class="ph">
-                <div class="pt">
-                    <h3>Glitched Skin Pack</h3>
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Glitched Skin Pack</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
                 </div>
                 <div class="pp">
                     <h3 data-pp>FREE</h3>
@@ -160,8 +201,13 @@
                 <img src="/media/store/contents/RareFrostbites One Block Sky Block.jpg" alt="RareFrostbites One Block Sky Block">
             </div>
             <div class="ph">
-                <div class="pt">
-                    <h3>RareFrostbites One Block Sky Block</h3>
+                <div class="pi">
+                    <div class="pt">
+                        <h3>RareFrostbites One Block Sky Block</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
                 </div>
                 <div class="pp">
                     <h3 data-pp>FREE</h3>
@@ -176,8 +222,13 @@
                 <img src="/media/store/contents/RareFrostbites Sky World.jpg" alt="RareFrostbites Sky World">
             </div>
             <div class="ph">
-                <div class="pt">
-                    <h3>RareFrostbites Sky World</h3>
+                <div class="pi">
+                    <div class="pt">
+                        <h3>RareFrostbites Sky World</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
                 </div>
                 <div class="pp">
                     <h3 data-pp>FREE</h3>
@@ -192,8 +243,13 @@
                 <img src="/media/store/contents/RareFrostbites Apocalyptic Wars.jpg" alt="">
             </div>
             <div class="ph">
-                <div class="pt">
-                    <h3>Halloween Endless Run</h3>
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Halloween Endless Run</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
                 </div>
                 <div class="pp">
                     <h3 data-pp>FREE</h3>
@@ -208,8 +264,13 @@
                 <img src="/media/store/contents/Ya Ea.jpg" alt="">
             </div>
             <div class="ph">
-                <div class="pt">
-                    <h3>Halloween Endless Run</h3>
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Halloween Endless Run</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
                 </div>
                 <div class="pp">
                     <h3 data-pp>FREE</h3>
@@ -224,8 +285,13 @@
                 <img src="/media/store/contents/RareChristmas Bundle.jpg" alt="">
             </div>
             <div class="ph">
-                <div class="pt">
-                    <h3>Halloween Endless Run</h3>
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Halloween Endless Run</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
                 </div>
                 <div class="pp">
                     <h3 data-pp>FREE</h3>
@@ -240,8 +306,13 @@
                 <img src="/media/store/contents/Ya Ea.jpg" alt="">
             </div>
             <div class="ph">
-                <div class="pt">
-                    <h3>Halloween Endless Run</h3>
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Halloween Endless Run</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
                 </div>
                 <div class="pp">
                     <h3 data-pp>FREE</h3>
