--- a/styles/store/assets/content.css
+++ b/styles/store/assets/content.css
@@ -18,6 +18,7 @@
 
 .body .content {
   margin-top: 60px;
+  margin-bottom: 60px;
   height: auto;
 }
 
@@ -45,7 +46,7 @@
   width: 200%;
   height: 200%;
   margin: -50%;
-  z-index: 3;
+  z-index: 2;
   position: fixed;
 }
 
