--- a/components/store/index/content.html
+++ b/components/store/index/content.html
@@ -30,7 +30,7 @@
     <a href="#">
         <div class="sel texture">
             <div class="ti">
-                <img src="/media/store/contents/Ya Ea.jpg" alt="Ya Ea">
+                <img src="/media/store/com.rarefrostbites.10.ya_ea.jpg" alt="Ya Ea">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -51,7 +51,7 @@
     <a href="#">
         <div class="sel skin">
             <div class="ti">
-                <img src="/media/store/contents/RareChristmas Bundle.jpg" alt="RareChristmas Bundle">
+                <img src="/media/store/com.rarefrostbites.9.rarechristmas_bundle.jpg" alt="RareChristmas Bundle">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -72,7 +72,7 @@
     <a href="#">
         <div class="sel skin">
             <div class="ti">
-                <img src="/media/store/contents/1st Century.jpg" alt="1st Century">
+                <img src="/media/store/com.rarefrostbites.8.1st_century.jpg" alt="1st Century">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -93,7 +93,7 @@
     <a href="#">
         <div class="sel map">
             <div class="ti">
-                <img src="/media/store/contents/Find the Lever.jpg" alt="Find the Lever">
+                <img src="/media/store/com.rarefrostbites.7.find_the_lever.jpg" alt="Find the Lever">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -114,7 +114,7 @@
     <a href="#">
         <div class="sel map">
             <div class="ti">
-                <img src="/media/store/contents/Halloween Endless Run.jpg" alt="Halloween Endless Run">
+                <img src="/media/store/com.rarefrostbites.6.halloween_endless_run.jpg" alt="Halloween Endless Run">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -135,7 +135,7 @@
     <a href="#">
         <div class="sel skin">
             <div class="ti">
-                <img src="/media/store/contents/RareFrostbites Halloween Skin Pack Bundle.jpg" alt="RareFrostbites Halloween Skin Pack Bundle">
+                <img src="/media/store/com.rarefrostbites.5.halloween_bundle.jpg" alt="RareFrostbites Halloween Skin Pack Bundle">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -156,7 +156,7 @@
     <a href="#">
         <div class="sel map">
             <div class="ti">
-                <img src="/media/store/contents/RareFrostbites Apocalyptic Wars.jpg" alt="RareFrostbites Apocalyptic Wars">
+                <img src="/media/store/com.rarefrostbites.4.apocalyptic_wars.jpg" alt="RareFrostbites Apocalyptic Wars">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -177,7 +177,7 @@
     <a href="#">
         <div class="sel skin">
             <div class="ti">
-                <img src="/media/store/contents/Glitched Skin Pack.jpg" alt="Glitched Skin Pack">
+                <img src="/media/store/com.rarefrostbites.3.glitched.jpg" alt="Glitched Skin Pack">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -198,7 +198,7 @@
     <a href="#">
         <div class="sel map">
             <div class="ti">
-                <img src="/media/store/contents/RareFrostbites One Block Sky Block.jpg" alt="RareFrostbites One Block Sky Block">
+                <img src="/media/store/com.rarefrostbites.2.one_sky_block.jpg" alt="RareFrostbites One Block Sky Block">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -219,7 +219,7 @@
     <a href="#">
         <div class="sel map">
             <div class="ti">
-                <img src="/media/store/contents/RareFrostbites Sky World.jpg" alt="RareFrostbites Sky World">
+                <img src="/media/store/com.rarefrostbites.1.sky_world.jpg" alt="RareFrostbites Sky World">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -240,7 +240,7 @@
     <!-- <a href="#">
         <div class="sel map">
             <div class="ti">
-                <img src="/media/store/contents/RareFrostbites Apocalyptic Wars.jpg" alt="">
+                <img src="/media/store/com.rarefrostbites.4.apocalyptic_wars.jpg" alt="">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -261,7 +261,7 @@
     <a href="#">
         <div class="sel texture">
             <div class="ti">
-                <img src="/media/store/contents/Ya Ea.jpg" alt="">
+                <img src="/media/store/com.rarefrostbites.10.ya_ea.jpg" alt="">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -282,7 +282,7 @@
     <a href="#">
         <div class="sel skin">
             <div class="ti">
-                <img src="/media/store/contents/RareChristmas Bundle.jpg" alt="">
+                <img src="/media/store/com.rarefrostbites.9.rarechristmas_bundle.jpg" alt="">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -303,7 +303,7 @@
     <a href="#">
         <div class="sel mash-up">
             <div class="ti">
-                <img src="/media/store/contents/Ya Ea.jpg" alt="">
+                <img src="/media/store/com.rarefrostbites.10.ya_ea.jpg" alt="">
             </div>
             <div class="ph">
                 <div class="pi">
