--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -22,3 +22,27 @@
         </div>
     </div>
 </div>
+
+<div class="share">
+    <div class="holder">
+        <input type="text" id="cl" value="https://rfbcanary.pages.dev/store/com.rarefrostbites.10.ya_ea" />
+        <button onclick="copy('cl')">
+            <img src="/media/store/assets/Share-RFB.svg" alt="">
+        </button>
+        
+        <a onClick="MyWindow=window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frfbcanary.pages.dev%2Fstore%2Fcom.rarefrostbites.10.ya_ea&amp;src=sdkpreparse','MyWindow','left=460,width=600,height=600'); return false;">
+            <button>
+                <img src="/media/store/assets/Facebook-share.svg" alt="">
+            </button>
+        
+        <a onClick="MyWindow=window.open('https://www.reddit.com/submit?url=https://rfbcanary.pages.dev/store/com.rarefrostbites.10.ya_ea&title=Check%20Ya%20Ea%20made%20on%20RFB%20Store','MyWindow','top=100,left=460,width=600,height=600'); return false;">
+            <button>
+                <img src="/media/store/assets/Reddit-share.svg" alt="">
+            </button>
+        </a>
+    </div>
+</div>
+
+<div class="pps">
+        
+</div>
