--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -25,7 +25,7 @@
 
 <div class="share">
     <div class="holder">
-        <input type="text" id="cl" value="https://rfbcanary.pages.dev/store/com.rarefrostbites.10.ya_ea" />
+        <input type="text" id="cl" value="https://rfbcanary.pages.dev/store/com.rarefrostbites.10.ya_ea" readonly/>
         <button onclick="copy('cl')">
             <img src="/media/store/assets/Share-RFB.svg" alt="">
         </button>
