--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -1,3 +1,11 @@
+<div class="alert-cl" id="alert-cl">
+    <div class="alert-cl-h">
+        <div class="alert-cl-h-h" id="alert-cl-h-h">
+            <h3>Link copied</h3>
+        </div>
+    </div>
+</div>
+
 <div class="hp">
     <div class="t">
         <img src="/media/store/com.rarefrostbites.10.ya_ea.jpg" alt="Ya Ea">
