--- a/styles/store/com.rarefrostbites.10.ya_ea.css
+++ b/styles/store/com.rarefrostbites.10.ya_ea.css
@@ -16,10 +16,11 @@
 
 
 .alert-cl {
-    position: absolute;
+    position: fixed;
     display: flex;
     width: 100%;
-    margin-top: -19px;
+    height: 60px;
+    top: 60px;
     justify-content: center;
     align-items: center;
 }
@@ -232,9 +233,22 @@
 
 
 .pps {
-    width: auto;
+    max-width: 640px;
     height: 250px;
     margin-top: 50px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.pps .pps-h {
+    display: flex;
+    overflow-x: scroll;
+    align-items: center;
+}
+
+.pps .pps-h .pps-s {
+    display: flex;
+    height: 250px;
+    justify-content: center;
+    align-items: center;
 }
