--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -1,7 +1,7 @@
 <div class="alert-cl" id="alert-cl">
     <div class="alert-cl-h">
         <div class="alert-cl-h-h" id="alert-cl-h-h">
-            <h3>Link copied</h3>
+            <h3 data-cl></h3>
         </div>
     </div>
 </div>
@@ -52,5 +52,33 @@
 </div>
 
 <div class="pps">
-        
+        <div class="pps-h">
+            <div class="pps-s">
+                <div class="fb-video" data-href="https://www.facebook.com/RareFrostbites/videos/808457726409849/" data-width="443" data-show-text="false"><blockquote cite="https://www.facebook.com/RareFrostbites/videos/808457726409849/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/RareFrostbites/videos/808457726409849/">Ya Ea - Texture Pack Trailer</a><p>Get peace, drink cup of tea under the Temple, see the skies, the sun is flowing on you. Costumize yourself into Chinese adventure.
+
+                    Get it now
+                    RFB Store: https://rarefrostbites.github.io/store/Ya_Ea
+                    
+                    Trailer by PhilMinecraft: https://fb.me/PhilMinecraft.3
+                    
+                    ⚠️READ RULES AND REGULATIONS⚠️(inside the file)
+                    
+                    Credits to the Music: ▶▶▶
+                    Music: secret information
+                    Artist: ninja brain
+                    Link: https://youtu.be/p4Q3RSXhGUI
+                    
+                    Credit to Owner:
+                    This Texture Pack is made by Dmonster, a dedicated Frostbits that he made a first Texture Pack for us.
+                    Profile: https://fb.com/dmonster.pithwa
+                    
+                    Contact Us:
+                    •[Gmail] - rarefrostbitesteam&#064;gmail.com
+                    •[Outlook] - rarefrostbitesteam&#064;outlook.com
+                    
+                    #RareFrostbites
+                    #RareFrostbites_Texture_Packs
+                    #Ya_Ea</p>Nai-post ni <a href="https://www.facebook.com/RareFrostbites/">RareFrostbites Team</a> noong Huwebes, Pebrero 11, 2021</blockquote></div>
+            </div>
+        </div>
 </div>
