--- a/styles/store/com.rarefrostbites.10.ya_ea.css
+++ b/styles/store/com.rarefrostbites.10.ya_ea.css
@@ -250,6 +250,7 @@
 .pps .pps-h .pps-s {
     display: flex;
     height: 250px;
+    overflow: hidden;
     justify-content: center;
     align-items: center;
 }
