--- a/styles/store/com.rarefrostbites.10.ya_ea.css
+++ b/styles/store/com.rarefrostbites.10.ya_ea.css
@@ -192,7 +192,7 @@
     display: flex;
     width: 50px;
     height: 50px;
-    margin-right: 10px;
+    margin-left: 10px;
     background-color: #c6c6c6;
     border-top: 3px solid #dedede;
     border-right: 3px solid #656465;
@@ -229,6 +229,13 @@
     opacity: 0%;
     width: 10px;
     height: 10px;
+    transform: translate(-100000px);
+}
+
+@media only screen and (max-width: 320px) {
+    .share {
+        width: 320px;
+    }
 }
 
 
