--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -52,7 +52,7 @@
 </div>
 
 <div class="pps">
-        <div class="pps-h">
+        <div class="pps-h" style="justify-content: center; overflow-x: hidden;">
             <div class="pps-s" style="width: 440px;">
                 <div class="fb-video" data-href="https://www.facebook.com/RareFrostbites/videos/808457726409849/" data-width="444" data-show-text="false">
                     <blockquote cite="https://www.facebook.com/RareFrostbites/videos/808457726409849/" class="fb-xfbml-parse-ignore" style="opacity: 0%;"><a href="https://www.facebook.com/RareFrostbites/videos/808457726409849/">Ya Ea - Texture Pack Trailer</a><p>Get peace, drink cup of tea under the Temple, see the skies, the sun is flowing on you. Costumize yourself into Chinese adventure.
